--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -2,6 +2,8 @@
   flex: 2;
   border: 1px solid grey;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
 }
 .top {
   display: flex;
@@ -23,6 +25,48 @@
   }
 }
 .center {
+  height: 70vh;
+  /* flex:1; */
+  overflow-y: auto;
+  padding: 10px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  .message {
+    max-width: 60%;
+    display: flex;
+    gap: 10px;
+    padding: 10px 0px;
+    &.own {
+      align-self: end;
+      .text {
+        margin: 0px 0.789rem;
+        p {
+          background-color: rgba(27, 138, 216, 0.845);
+          border-radius: 15px;
+        }
+      }
+    }
+    img {
+      width: 30px;
+      height: 30px;
+      border-radius: 50px;
+    }
+    .text {
+      font-size: 13px;
+      p {
+        background-color: rgba(8, 8, 100, 0.3);
+        margin-bottom: 0.5rem;
+        padding: 0.785rem 1rem;
+        border-radius: 15px;
+      }
+      img {
+        height: 300px;
+        border-radius: 10px;
+        width: 100%;
+      }
+    }
+  }
 }
 .bottom {
   display: flex;
@@ -48,12 +92,17 @@
   .emoji {
     flex: 0.1;
     text-align: center;
+    position: relative;
+    .picker {
+      position: absolute;
+      bottom: 30px;
+    }
   }
   .sendbutton {
     background-color: rgb(36, 102, 214);
     color: white;
     padding: 5px;
-    border:none;
+    border: none;
     border-radius: 5px;
   }
 }
