--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,15 @@ body {
 .container {
   width: 80vw;
   height: 90vh;
-
-  background-color: rgba(28, 78, 169, 0.75);
+  background-color: rgba(28, 77, 169, 0.75);
   backdrop-filter: blur(19px) saturate(180%);
   border-radius: 12px;
   display: flex;
+}
+.loading{
+  padding: 50px;
+  font-size: 36px;
+  border-radius: 10px;
+  background-color: rgba(17, 25, 40, 0.9);
+  
 }
